@@ -179,7 +179,7 @@ public class WorkflowExecutor implements Callable<Pair<WorkflowExecution, Boolea
     }
 
     // Compute the finished date
-    final AbstractMetisPlugin<?> lastPlugin = metisPlugins.get(metisPlugins.size() - 1);
+    final AbstractMetisPlugin<?> lastPlugin = metisPlugins.getLast();
     final Date finishDate;
     if (lastPlugin.getPluginStatus() == PluginStatus.FINISHED) {
       finishDate = lastPlugin.getFinishedDate();
@@ -530,8 +530,7 @@ public class WorkflowExecutor implements Callable<Pair<WorkflowExecution, Boolea
         System.currentTimeMillis() - checkPointDateOfProcessedRecordsPeriodInMillis.get())
         >= periodOfNoProcessedRecordsChangeInSeconds;
     if (isMinuteCapOverWithoutChangeInProcessedRecords) {
-      //Request cancelling of the execution
-      workflowExecutionDao.setCancellingState(workflowExecution, "");
+      workflowExecutionDao.setCancellingStateSystem(workflowExecution);
     }
     return isMinuteCapOverWithoutChangeInProcessedRecords;
   }
